fix: Improved text visibility on light backgrounds

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(0, 0, 0, .375);
+	background-color: rgba(0, 0, 0, .5);
 	z-index: 0;
 	cursor: auto;
 	transition: .3s
